--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": "Thomas Gouty",
     "license": "MIT",
     "scripts": {
-        "start-server": "node app.js",
-        "start-dev": "nodemon app.js",
+        "start-server": "node index.js",
+        "start-dev": "nodemon index.js",
         "new_report": "npx zx ./newman_script.mjs"
     },
     "dependencies": {
